--- a/build.gradle
+++ b/build.gradle
@@ -78,10 +78,12 @@ dependencyManagement {
         dependency "log4j:log4j:1.2.17"
         dependency "org.codehaus.groovy:groovy-all:2.4.4"
         dependency "org.grails:grails-bootstrap:2.5.4"
+        dependency "org.grails:grails-core:2.5.4"
         dependency "org.grails:grails-datastore-test-support:1.0.2-grails-2.4"
         dependency "org.grails:grails-docs:2.5.4"
         dependency "org.grails:grails-plugin-async:2.5.4"
         dependency "org.grails:grails-plugin-databinding:2.5.4"
+        dependency "org.grails:grails-dependencies:2.5.4"
         dependency "org.grails:grails-plugin-filters:2.5.4"
         dependency "org.grails:grails-plugin-gsp:2.5.4"
         dependency "org.grails:grails-plugin-i18n:2.5.4"
